samples/_failures_safe/1761468511_b08f8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e9eeb56.c: In function ‘main’:
./samples/SAFE/__tmp_3e9eeb56.c:157:28: error: expected ‘)’ at end of input
  157 |     graph_add_edge(&g, a, b
      |                   ~        ^
      |                            )
./samples/SAFE/__tmp_3e9eeb56.c:157:5: error: too few arguments to function ‘graph_add_edge’
  157 |     graph_add_edge(&g, a, b
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_3e9eeb56.c:48:5: note: declared here
   48 | int graph_add_edge(struct Graph *g, int from, int to, int weight) {
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_3e9eeb56.c:157:5: error: expected declaration or statement at end of input
  157 |     graph_add_edge(&g, a, b
      |     ^~~~~~~~~~~~~~
